fix: hacky way to add z-index

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -218,3 +218,6 @@ select
 .form-spacing
   input,button
     margin-top: 10px
+
+._c-notification__container_qmx12s
+  z-index: 2000!important
